fix tx card wrap text

--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@
 
 .dblocks-card-content {
     margin: 0;
+    word-break: break-word;
 }
 
 /* .table-supply tr td {
